# bingefriend-shows-infra_azure

./: .funcignore  .gitignore  README.md  docker-compose.yml  function_app.py  host.json  local.settings.json  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml
alembic/: .env.alembic.template  env.py
alembic/versions/: 134ba54712fc_initial_schema.py  bd2360bd9252_initial_schema.py  f40d8f97ce24_initial_schema.py
src/bingefriend/shows/infra_azure/: config.py
src/bingefriend/shows/infra_azure/blueprints/: bp_ingest.py  bp_terminate.py  bp_update.py
src/bingefriend/shows/infra_azure/repositories/: database.py  episode_repo.py  genre_repo.py  network_repo.py  season_repo.py  show_genre_repo.py  show_repo.py  web_channel_repo.py
src/bingefriend/shows/infra_azure/services/: episode_service.py  genre_service.py  network_service.py  season_service.py  show_genre_service.py  show_service.py  web_channel_service.py
tests/shows/infra_azure/repositories/: test_genre_repo.py
