[project]
name = "bingefriend-shows-infra-azure"
version = "0.1.4"
description = ""
author = ["Tom Boone <tbc@tomboone.com>"]

[tool.poetry]
packages = [
    {include = "bingefriend", from = "src"},
]


[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.23.0"
azure-functions-durable = "^1.2.10"
bingefriend-shows-application = "^0.1.14"
bingefriend-shows-client-tvmaze = "^0.1.3"
bingefriend-shows-core = "^0.2.7"
sqlalchemy = "2.0.40"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
pymysql = "^1.1.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
